# bioview-client

./: .gitignore  README.md  dummy_cfg.json  dummy_multi_cfg.json  dummy_timed_cfg.json  pyproject.toml  sample_cfg.json
.github/workflows/: ci.yml
bioview_client/: configurator.py  handler.py  helpers.py  launch.py  monitor.py  workers.py
bioview_client/assets/: __init__.py  icon_code.txt
bioview_client/components/: __init__.py  annotate_event.py  app_control.py  config_prompt.py  device_status.py  experiment_settings.py  plot_grid.py  server_connector.py  status_bar.py  usrp_device_config.py
bioview_client/components/common/: __init__.py  checkable_combo_box.py  toast.py
bioview_client/components/routine_control/: __init__.py  audio_player.py  instruction_controller.py  instruction_dialog.py  routine.py  routine_handler.py  text_instructions.py
bioview_client/components/settings_panel/: __init__.py  common_settings.py  device_settings.py  panel_utils.py  settings_handler.py  usrp_channel_map_panel.py  usrp_settings.py
bioview_client/constants/: __init__.py  configuration.py  protocol.py  status.py  theme.py
bioview_client/utils/: __init__.py  authentication.py  discovery.py  files.py  network.py  type_check.py  zeroconf_discovery.py
instructions/: sample_text.txt
tests/: bvr_reader.py  conftest.py  test_bvr_saving.py  test_discovery.py  test_discovery_broadcast_monkey.py  test_file_naming_and_annotations.py  test_handler_and_network.py  test_integration_auth.py  test_network.py  test_server_serialization_and_payloads.py  test_statusbar_signals.py  test_ui_components.py
