[project]
name = "bioview-client"
version = "0.9.3.9debug"
description = "A front-end for real-time visualization of data acquired by the BioView server"
authors = [
    {name = "Aakash Kapoor",email = "113218196+meowkash@users.noreply.github.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "qtawesome (>=1.4.0,<2.0.0)",
    "pyqtdarktheme2 (>=2.1.2,<3.0.0)",
    "darkdetect (>=0.7.1, <0.8.0)",
]

[project.scripts]
# Primary launcher: starts a hidden localhost server, then opens the Monitor GUI
bioview = "bioview_client.launch:main"
bioview-monitor = "bioview_client.launch:main"
bioview-configurator = "bioview_client.configurator:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.8"
pytest = "^8.4.1"
numpy = ">=1.26"
scipy = ">=1.16"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
# The client is a PyQt6 app; tests set QT_QPA_PLATFORM=offscreen in conftest.py.

[tool.ruff]
line-length = 89
target-version = "py38"
extend-exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv"
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
# Plus isort (`I`) for import sorting
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90"]
ignore = [
    "E203",  # whitespace before ':'
]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["your_package"]  # Replace with your actual package name
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"
